# tution-payments-pinocchio

./: Cargo.toml  README.md
src/: lib.rs
src/instructions/: add_subjects.rs  initialize_student.rs  initialize_uni.rs  initialize_vire.rs  mod.rs  pay_tution_fee.rs  unstake.rs  vire_instructions.rs
src/states/: mod.rs  student_account.rs  subject_account.rs  uni_account.rs  vire_account.rs
